# chznexus

./: .gitignore  README.md  main.py  makefile  pyproject.toml
.github/workflows/: python-tests.yml
chznexus/: app.py
chznexus/bot/: __init__.py  auth.py  bot.py  chat.py  user.py  utils.py  websocket_handler.py
chznexus/templates/: index.html
chznexus/tests/: test_core.py
